# commonsense

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
